swagger connection to db
