# backEnd/api/controllers/GetAllViewFilters.js
@@ -1,0 +1,7 @@
+module.exports = {
+  GetAllViewFilters : GetAllViewFilters
+};
+
+function GetAllViewFilters(req,res) {
+    
+}
